Add HTML structure for travel cards and update styles

--- a/card1.html
+++ b/card1.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card1</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Explore our seoul</h1>
-    <h3>200 hotels, 345 local flights and 234 bus providers</h3>
-    <button>Explore</button>
+    <div class="card">
+        <div class="head">
+            <h1 class="h1c1">Explore our seoul</h1>
+            <h3 class="h3c1">200 hotels, 345 local flights and 234 bus providers</h3>
+            <button>Explore</button>
+        </div>
+        <img src="images/thumb1.jpg" alt="Templo japones" class="img1">
+    </div>
 </body>
 </html>
