Update card1.html and card2.html structure; enhance styles in style.css

--- a/card1.html
+++ b/card1.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="card">
+    <div class="card1">
+        <img src="images/thumb1.jpg" alt="Templo japones" class="img1">
         <div class="head">
+            <div>
             <h1 class="h1c1">Explore our seoul</h1>
             <h3 class="h3c1">200 hotels, 345 local flights and 234 bus providers</h3>
+            </div>
             <button>Explore</button>
-        </div>
-        <img src="images/thumb1.jpg" alt="Templo japones" class="img1">
+      </div>
+        
+        
     </div>
 </body>
 </html>
