--- a/card2.html
+++ b/card2.html
@@ -6,7 +6,10 @@
     <title>Card2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
+<body class="card2">
+    <h1>Cape Town</h1>
+    <h3>Gregory Lane</h3>
+    <img src="images/thumbc2.jpg" alt="mujer">
+    <img src="images/thumb2.jpg" alt="fondo">
 </body>
 </html>
