--- a/card2.html
+++ b/card2.html
@@ -6,10 +6,14 @@
     <title>Card2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="card2">
-    <h1>Cape Town</h1>
-    <h3>Gregory Lane</h3>
-    <img src="images/thumbc2.jpg" alt="mujer">
-    <img src="images/thumb2.jpg" alt="fondo">
+<body>
+    <div class="card2">
+        <img src="images/thumb2.jpg" alt="fondo" class="img2">
+        <div class="head2">
+            <h1 class="h1c2">Cape Town</h1>
+            <h3 class="h3c2">Gregory Lane</h3>
+            <img src="images/thumbc2.jpg" alt="mujer" class="immg2">
+        </div>
+    </div>
 </body>
 </html>
