--- a/card3.html
+++ b/card3.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="card3">
+        <h1 class="h1c3">Not a Member Yet?</h1>
+        <h3 class="h3c3">Join us! Timbu.com members can access savungs of up to 50% and earn Timbu Coins while booking.</h3>
+        <div class="buttn">
+            <button>Sign In</button>
+            <button>Register</button>
+        </div>
+    </div>
 </body>
 </html>
