Refactor card3.html structure and update styles in style.css for improved layout and design

--- a/card3.html
+++ b/card3.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="card3">
-        <h1 class="h1c3">Not a Member Yet?</h1>
-        <h3 class="h3c3">Join us! Timbu.com members can access savungs of up to 50% and earn Timbu Coins while booking.</h3>
-        <div class="buttn">
-            <button>Sign In</button>
-            <button>Register</button>
-        </div>
+        <img src="images/thumb3.png" alt="manos">
+            <div class="txt">
+                <h1 class="h1c3">Not a Member Yet?</h1>
+                <h3 class="h3c3">Join us! Timbu.com members can access savungs of up to 50% and earn Timbu Coins while booking.</h3>
+            </div>
+            <div class="buttn">
+                <button>Sign In</button>
+                <button>Register</button>
+            </div>
     </div>
 </body>
 </html>
