fondo de img corregido

--- a/card1.html
+++ b/card1.html
@@ -14,7 +14,7 @@
             <h1 class="h1c1">Explore our seoul</h1>
             <h3 class="h3c1">200 hotels, 345 local flights and 234 bus providers</h3>
             </div>
-            <button>Explore</button>
+            <button class="b1">Explore</button>
       </div>
         
         
