--- a/card3.html
+++ b/card3.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div class="card3">
-        <img src="images/thumb3.png" alt="manos">
-            <div class="txt">
+        <img src="images/thumb3.png" alt="manos" class="img3">
+            <div class="head3">
                 <h1 class="h1c3">Not a Member Yet?</h1>
                 <h3 class="h3c3">Join us! Timbu.com members can access savungs of up to 50% and earn Timbu Coins while booking.</h3>
-            </div>
+            
             <div class="buttn">
-                <button>Sign In</button>
-                <button>Register</button>
+                <button class="b3">Sign In</button>
+                <button class="b3c3">Register</button>
             </div>
+        </div>
     </div>
 </body>
 </html>
