Refactor code structure for improved readability and maintainability

--- a/card4.html
+++ b/card4.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="card4">
+        <h1>Bungalow.</h1>
+        <h3>Live like a local near areas you love.</h3>
+        <p>245 Bungalow rooms</p>
+    </div>
 </body>
 </html>
