--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <title>PRINCIPAL</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="index.html">
-    <h1>Travel Cards - Maquetació CSS</h1>
-    <h3>Es tracta d'una col·lecció de cartes de viatge</h3>
+<body>
+    <div class="indexhtml">
+    <head>
+        <h1>Travel Cards - Maquetació CSS</h1>
+        <h3>Es tracta d'una col·lecció de cartes de viatge</h3>
+    </head>
+
+
+    <main>
+        <a href="card1.html" target="_blank" rel="noopener noreferrer">
+            <img src="images/thumb1.jpg" alt="">
+        </a>
+
+        <a href="card2.html" target="_blank" rel="noopener noreferrer">
+            <img src="images/thumb2.jpg" alt="">
+        </a>
+
+        <a href="card3.html" target="_blank" rel="noopener noreferrer">
+            <img src="images/thumbf3.png" alt="">
+        </a>
+    </main>
+    </div>
 </body>
 </html>
